--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -131,26 +131,28 @@ padding: 8px;
 }
 
 
-.dropdown-list {
-background-color: white;
-border: 1px solid #ccc;
-border-radius: 4px;
-max-height: 200px;
-overflow-y: auto;
-box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-position: absolute;
-width: 21%;
-margin-top: 4px;
-z-index: 100;
+  
+table {
+  width: 100%;
+  border-collapse: collapse;
+ 
 }
-
-
-.dropdown-item {
-padding: 8px;
-cursor: pointer;
-transition: background-color 0.2s ease;
-}
-
-.dropdown-item:hover {
-background-color: #f1f1f1;
-}
+  
+  th, td {
+    padding: 4px 8px; 
+    text-align: left;
+    border-bottom: 2px solid #ddd;
+  }
+  
+  thead {
+    background-color: #4CAF50;
+    color: white;
+  }
+  
+  tbody tr:hover {
+    background-color: #f5f5f5; 
+  }
+  
+  
+  
+  
